--- a/index.html
+++ b/index.html
@@ -20,20 +20,44 @@
 
   <main>
     <section class="description">
-      <div class="description-div1">
+      <div class="description-heading">
         <h2>Why Web Development??</h2>
-        <p style="margin-top: 24px;">I love coding more than anything else. I'm enjoying coding. When I fishied a tasks it's give me pleasers. I want to try my best to gain my aim and also to fulfill dreams.</p>
+        <p style="margin-top: 24px;">I love coding more than anything else. I'm enjoying coding. When I fishied a tasks it's give me pleasers. I want to try my best to gain my aim and also <br>to fulfill dreams.</p>
       </div>
-      <div class="description-div2">
-        <div class="div2-text">
+      <div class="description-section-1">
+        <div class="description-section-1-text">
           <h3 >I will Do Coding and Change The <br> World</h3>
           <p>It's so challenging for me. But nathing is impossible. <br> I want to practice the best version of coding.</p>
           <a style="text-decoration: none;" href="why-learning-coding.html">Learn More</a>
         </div>
-        <div class="div2-img"><img src="assets/layer_1-yello-green.png" alt="a boy is typing"></div>
+        <div class="description-section-1-img"><img src="assets/layer_1-yello-green.png" alt="a boy is typing"></div>
       </div>
-      <div class="description-div3"></div>
-      <div class="description-div4"></div>
+      <div class="description-section-2">
+        <img src="assets/group 3-red.png" alt="a boy is typing">
+        <div class="description-section-2-text"><h3>I will help People by creating Modern Web System</h3>
+        <p>By using of modarn tecnoligy people can make there life more easy and comfortable</p>
+        <a style="text-decoration: none;" href="modarn-web-system.html">Learn More</a>
+      </div>
+      </div>
+      <div class="description-section-3">
+        <div class="description-section-3-text">
+          <h3>I will Do Coding and Change The World</h3>
+          <p>It is widely used in our daily life, from gadgets such as smartphones, tablets, smart TV and other smart home
+          appliances, to automated cars and facilities like traffic lights, etc., it has been part of our lives. In 2024's AI era</p>
+          <a style="text-decoration: none;" href="modarn-web-system.html">Learn More</a>
+        </div>
+        <img src="assets/group 4-orenge.png" alt="a boy is typing">
+      </div>
+    </section>
+    <section class="video-link">
+      <h3>My Inspiration</h3>
+      <p>my family is my inspiration. I am try to make them happy</p>
+      <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/nSClTQE7K6s?si=L_o7QrnXApw953iA"
+          title="YouTube video player" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div> 
     </section>
 
   </main>
