added suport section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </section>
     <section class="video-link">
       <h3>My Inspiration</h3>
-      <p>my family is my inspiration. I am try to make them happy</p>
+      <p style="margin-top:24px ;">my family is my inspiration. I am try to make them happy</p>
       <div class="video">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/nSClTQE7K6s?si=L_o7QrnXApw953iA"
           title="YouTube video player" frameborder="0"
@@ -59,7 +59,38 @@
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div> 
     </section>
-
+    <section class="current-target-container">
+      <h3>My Current Target</h3>
+      <p>HTML CSS and JAVASRIPT.Html is the standard markup language for Web pages.Css is use for style web pages. Java-sreipt are the heart of them. Enjoying it!</p>
+      <div class="element-container">
+        <div class="box-of-container">
+          <img src="assets/html.png" alt="html logo">
+          <h4>HTML</h4>
+          <p>Html is the standard markup language for Web pages.HTML stands for Hyper Text Markup Language
+          HTML is the standard markup language for creating Web pages</p>
+          <a class="container-btn" href="about-html.html">Learn More</a>
+        </div>
+        <div class="box-of-container">
+          <img src="assets/css.png" alt="css logo">
+          <h4>CSS</h4>
+          <p>CSS stands for Cascading Style Sheets
+          CSS describes how HTML elements are to be displayed on screen, paper, or in other media</p>
+          <a class="container-btn" href="about-css.html">Learn More</a>
+        </div>
+        <div class="box-of-container">
+          <img src="assets/js.png" alt="js logo">
+          <h4>JavaScript</h4>
+          <p>JavaScript is the world's most popular programming language.JavaScript is the programming language of the Web.</p>
+          <a class="container-btn" href="about-jvscrpt.html">Learn More</a>
+        </div>
+      </div>
+    </section>
+     <section class="support">
+      <h3>I need Support</h3>
+      <p> am tring my best. Still face some diplometic esue. I do not get the please where I have been mistakes. So that I need support. </p>
+      <input type="text" placeholder="Suggest me any feedback for me">
+      <a href="feedback.html">Submit</a>
+     </section> 
   </main>
   <footer>
 
