--- a/index.html
+++ b/index.html
@@ -86,14 +86,22 @@
       </div>
     </section>
      <section class="support">
-      <h3>I need Support</h3>
-      <p> am tring my best. Still face some diplometic esue. I do not get the please where I have been mistakes. So that I need support. </p>
-      <input type="text" placeholder="Suggest me any feedback for me">
-      <a href="feedback.html">Submit</a>
+      <div class="support-text">
+        <h3>I need Support</h3>
+        <p> am tring my best. Still face some diplometic esue. I do not get the please where I have been mistakes. So that I
+          need support. </p>
+        <input type="text" placeholder="Suggest me any feedback for me">
+        <a class="sopport-submit" href="feedback.html">Submit</a>
+      </div>
      </section> 
   </main>
   <footer>
-
+    <section class="footer">
+      <h6>An open commitment by SORNA AKTER</h6>
+      <div class="footer-icon">
+        <img src="a" alt="">
+      </div>
+    </section>
   </footer>
 </body>
 </html>
