--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <h2>Why Web Development??</h2>
         <p style="margin-top: 24px;">I love coding more than anything else. I'm enjoying coding. When I fishied a tasks it's give me pleasers. I want to try my best to gain my aim and also <br>to fulfill dreams.</p>
       </div>
+      
       <div class="description-section-1">
         <div class="description-section-1-text">
           <h3 >I will Do Coding and Change The <br> World</h3>
@@ -34,16 +35,17 @@
       </div>
       <div class="description-section-2">
         <img src="assets/group 3-red.png" alt="a boy is typing">
-        <div class="description-section-2-text"><h3>I will help People by creating Modern Web System</h3>
-        <p>By using of modarn tecnoligy people can make there life more easy and comfortable</p>
+        <div class="description-section-2-text"><h3>I will help People by creating Modern <br>Web System</h3>
+        <p>By using of modarn tecnoligy people can make there life more <br>
+           easy and comfortable</p>
         <a style="text-decoration: none;" href="modarn-web-system.html">Learn More</a>
       </div>
       </div>
       <div class="description-section-3">
         <div class="description-section-3-text">
           <h3>I will Do Coding and Change The World</h3>
-          <p>It is widely used in our daily life, from gadgets such as smartphones, tablets, smart TV and other smart home
-          appliances, to automated cars and facilities like traffic lights, etc., it has been part of our lives. In 2024's AI era</p>
+          <p>It is widely used in our daily life, from gadgets such as <br> smartphones, tablets, smart TV and other smart home
+          </p>
           <a style="text-decoration: none;" href="modarn-web-system.html">Learn More</a>
         </div>
         <img src="assets/group 4-orenge.png" alt="a boy is typing">
@@ -59,29 +61,34 @@
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div> 
     </section>
-    <section class="current-target-container">
+    <div class="current-target-heading">
       <h3>My Current Target</h3>
-      <p>HTML CSS and JAVASRIPT.Html is the standard markup language for Web pages.Css is use for style web pages. Java-sreipt are the heart of them. Enjoying it!</p>
+      <p>HTML CSS and JAVASRIPT.Html is the standard markup language for Web pages.Css is use for style web pages.
+        Java-sreipt
+        are the heart of them. Enjoying it!</p>
+    </div>
+    <section class="current-target-container">
+     
       <div class="element-container">
         <div class="box-of-container">
           <img src="assets/html.png" alt="html logo">
-          <h4>HTML</h4>
+          <h4 style="margin: 10px;">HTML</h4>
           <p>Html is the standard markup language for Web pages.HTML stands for Hyper Text Markup Language
           HTML is the standard markup language for creating Web pages</p>
-          <a class="container-btn" href="about-html.html">Learn More</a>
+          <a style="margin: 10px; border: none" class="container-btn" href="about-html.html">Learn More</a>
         </div>
         <div class="box-of-container">
           <img src="assets/css.png" alt="css logo">
-          <h4>CSS</h4>
+          <h4  style="margin: 10px;">CSS</h4>
           <p>CSS stands for Cascading Style Sheets
           CSS describes how HTML elements are to be displayed on screen, paper, or in other media</p>
-          <a class="container-btn" href="about-css.html">Learn More</a>
+          <a  style="margin: 10px; border: none" class="container-btn" href="about-css.html">Learn More</a>
         </div>
         <div class="box-of-container">
           <img src="assets/js.png" alt="js logo">
-          <h4>JavaScript</h4>
+          <h4  style="margin: 10px;">JavaScript</h4>
           <p>JavaScript is the world's most popular programming language.JavaScript is the programming language of the Web.</p>
-          <a class="container-btn" href="about-jvscrpt.html">Learn More</a>
+          <a  style="margin: 10px; border: none;"class="container-btn" href="about-jvscrpt.html">Learn More</a>
         </div>
       </div>
     </section>
@@ -91,15 +98,17 @@
         <p> am tring my best. Still face some diplometic esue. I do not get the please where I have been mistakes. So that I
           need support. </p>
         <input type="text" placeholder="Suggest me any feedback for me">
-        <a class="sopport-submit" href="feedback.html">Submit</a>
+        <a style="display: inline ;" class="sopport-submit" href="feedback.html">Submit</a>
       </div>
      </section> 
   </main>
   <footer>
     <section class="footer">
-      <h6>An open commitment by SORNA AKTER</h6>
-      <div class="footer-icon">
-        <img src="a" alt="">
+      <h4>An open commitment by SORNA AKTER</h4>
+      <div style="text-decoration: right ;" class="footer-icon">
+        <img src="assets/facebook.png" alt="facebook">
+        <img src="assets/github.png" alt="github">
+        <img style="size: 10px;" src="assets/react.png" alt="react">
       </div>
     </section>
   </footer>
